@@ -1,5 +1,7 @@
 2014-12-17  Jason Merrill  <jason@redhat.com>
 
+	* constexpr.c: Change "addr" parm names to "lval".
+
 	* constexpr.c: Tweak comments and formatting.
 
 2014-12-16  Paolo Carlini  <paolo.carlini@oracle.com>
